--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,7 @@ body
 {  
     color: red;
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-
+    font-family:cursive;
 }
 #container
 {
